style: fix scrollbar shifting layout

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,6 +8,10 @@ html, body {
   background-color: #171212;
 }
 
+body {
+  overflow-y: scroll
+}
+
 hr {
   border: 0;
   height: 1px;
